# temporal-test-api-deployment

./: .env.example  .gitignore  Makefile  README.md  docker-compose.gcp.yml  docker-compose.yml  pyproject.toml
app/: activities.py  api.py  client.py  config.py  worker.py  workflows.py
docker/: Dockerfile
