[project]
name = "temporal-test-api"
version = "0.1.0"
description = "Dummy FastAPI app that triggers a Temporal workflow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "temporalio>=1.8.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
